--- a/charts/helm-example/values.yaml
+++ b/charts/helm-example/values.yaml
@@ -6,8 +6,8 @@ replicaCount: 1
 
 image:
   pullPolicy: IfNotPresent
-  repository: 145664717845.dkr.ecr.ap-south-1.amazonaws.com/gitops-argocd
-  version: main-5c84656
+  repository: nginx
+  version: latest
 
 imagePullSecrets: []
 nameOverride: ""
