--- a/charts/helm-example/values.yaml
+++ b/charts/helm-example/values.yaml
@@ -7,7 +7,7 @@ replicaCount: 1
 image:
   pullPolicy: IfNotPresent
   repository: nginx
-  version: latest
+  tag: 1.0
 
 imagePullSecrets: []
 nameOverride: ""
